Updated the results saving block

--- a/zijung/Experiment1.ipynb
+++ b/zijung/Experiment1.ipynb
@@ -3508,10 +3508,10 @@
       },
       "source": [
         "result_dict = {}\n",
-        "result_dict['target'] = pred_label\n",
-        "result_dict['id'] = list(test_df.id)"
+        "result_dict['id'] = list(test_df.id)\n",
+        "result_dict['target'] = pred_label"
       ],
-      "execution_count": 77,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -3522,18 +3522,114 @@
       "source": [
         "result_df = pd.DataFrame(result_dict)"
       ],
-      "execution_count": 81,
+      "execution_count": 84,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hCLuhUCPDqAh"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "id": "hCLuhUCPDqAh",
+        "outputId": "35a89ad1-4c87-4577-c9c7-ae12ebd05008"
       },
       "source": [
-        ""
+        "result_df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "      <th>target</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>9</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>11</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   id  target\n",
+              "0   0       1\n",
+              "1   2       1\n",
+              "2   3       1\n",
+              "3   9       1\n",
+              "4  11       1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UW_KwQApQX8A"
+      },
+      "source": [
+        "from pathlib import Path"
+      ],
+      "execution_count": 86,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HBk7Sf0xQEt0"
+      },
+      "source": [
+        "result_df.to_csv(Path(root)/'data'/'Prediction'/'raw_bert.csv', index = False)"
+      ],
+      "execution_count": 90,
       "outputs": []
     }
   ]
